tests/expected_identifier.c
//@FAIL
int main() {
    int 123bad = 10;
    return 0;
}